<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SearchActivity">

    <View
        android:id="@+id/background_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/background_bottom"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/small_dim">
    </View>

    <View
        android:id="@+id/background_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_view"
        android:background="@color/colorPaper">
    </View>

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_dim"
        android:background="@color/colorPaper"
        android:elevation="@dimen/small_dim"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/enter_keyword"

        />

    <ListView
        android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_view"
        android:background="@color/colorPaper"
        android:orientation="vertical" />

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/baseline_search_black_48" />

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_image"
            android:layout_centerHorizontal="true"
            android:text="@string/empty_search_heading"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/small_dim"
            android:text="@string/empty_search_subheading" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>