<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:windowSoftInputMode="adjustResize|adjustPan"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ManualActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/small_dim"
            app:cardUseCompatPadding="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_container"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/baseline_title_black_36"
                    android:drawablePadding="@dimen/small_dim"
                    android:hint="@string/title"
                    android:inputType="textCapSentences"
                    android:maxLength="60"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/small_dim"
            app:cardUseCompatPadding="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/author_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_container">

                <EditText
                    android:id="@+id/author_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/baseline_person_black_36"
                    android:drawablePadding="@dimen/small_dim"
                    android:hint="@string/author"
                    android:inputType="textCapSentences"
                    android:maxLength="40"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/small_dim"
            app:cardUseCompatPadding="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_container">

                <EditText
                    android:id="@+id/date_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/baseline_date_range_black_36"
                    android:drawablePadding="@dimen/small_dim"
                    android:hint="@string/date"
                    android:inputType="textCapSentences"
                    android:maxLength="20"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/corner_radius"
                app:cardElevation="@dimen/small_dim"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPaper"
                    android:padding="@dimen/small_dim">

                    <RatingBar
                        android:id="@+id/rating_bar"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize="1" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/corner_radius"
                app:cardElevation="@dimen/small_dim"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Spinner
                        android:id="@+id/status_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:spinnerMode="dropdown">

                    </Spinner>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/small_dim"
            app:cardUseCompatPadding="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/notes_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_container">

                <EditText
                    android:id="@+id/notes_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/notes"
                    android:inputType="textMultiLine|textCapSentences"
                    android:scrollbars="vertical" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>